번역, 단축URL 기능을 추가한다

--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,7 @@ service: lassistant
 
 custom:
   TELEGRAM: ${file(./config/config.js):TELEGRAM}
+  NAVER: ${file(./config/config.js):NAVER}
   schedules:  # info: Health Checker!
     dev: false
     production:
@@ -29,6 +30,8 @@ provider:
     TELEGRAM_CHAT_ID: ${self:custom.TELEGRAM.${self:provider.stage}.TELEGRAM_CHAT_ID}
     TELEGRAM_OWNER_CHAT_ID: ${self:custom.TELEGRAM.${self:provider.stage}.TELEGRAM_OWNER_CHAT_ID}
     TELEGRAM_BOT_NAME: ${self:custom.TELEGRAM.${self:provider.stage}.TELEGRAM_BOT_NAME}
+    NAVER_CLIENT_ID: ${self:custom.NAVER.${self:provider.stage}.NAVER_CLIENT_ID}
+    NAVER_CLIENT_SECRET: ${self:custom.NAVER.${self:provider.stage}.NAVER_CLIENT_SECRET}
 
 package:
   individually: true
