--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "moment": "^2.26.0",
+    "moment-timezone": "^0.5.31",
     "node-telegram-bot-api": "^0.50.0"
   }
 }
