--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "lassistant-a",
-  "version": "0.0.0",
+  "name": "lassistant",
+  "version": "1.0.0",
   "description": "Telegram Bot",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sls": "serverless"
   },
   "keywords": [],
   "author": "lodcoco@gmail.com",
@@ -15,5 +15,13 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.35",
     "node-telegram-bot-api": "^0.53.0"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.102",
+    "@types/node-telegram-bot-api": "^0.57.1",
+    "serverless": "^3.22.0",
+    "serverless-offline": "^10.0.0",
+    "serverless-plugin-typescript": "^2.1.2",
+    "typescript": "^4.8.2"
   }
 }
