--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -27,12 +27,12 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Install Dependencies
-        run: npm install -g yarn && yarn install
+        run: npm install -g yarn && yarn install --production
 
       - name: Serverless Deploy
         uses: serverless/github-action@v3.2
         with:
-          args: -c "serverless plugin install --name serverless-plugin-typescript && serverless deploy --stage production --verbose"
+          args: -c "serverless plugin install --name serverless-plugin-typescript && serverless deploy -s production --verbose"
           entrypoint: /bin/sh
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
