--- a/serverless.yml
+++ b/serverless.yml
@@ -72,9 +72,8 @@ functions:
       exclude:
         - src/**
       include:
-        - node_modules/**
         - lib/**
-        - src/schedule/**
+        - src/**
     events:
       - schedule:
           rate: cron(0 22 * * ? *)
