--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.126",
     "@types/node-telegram-bot-api": "^0.63.1",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "prettier": "^3.1.0",
     "serverless": "^3.36.0",
     "serverless-offline": "^10.3.2",
     "serverless-plugin-typescript": "^2.1.5",
