--- a/serverless.yml
+++ b/serverless.yml
@@ -41,7 +41,7 @@ package:
   individually: true
   exclude:
     - .idea/**
-    - package-lock.json
+    - yarn.lock
     - package.json
     - node_modules/**
     - test/**
@@ -72,6 +72,7 @@ functions:
       exclude:
         - src/**
       include:
+        - node_modules/**
         - lib/**
         - src/**
     events:
