--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "serverless": "^3.36.0",
     "serverless-offline": "^10.3.2",
     "serverless-plugin-typescript": "^2.1.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
