--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "jest": "^29.7.0",
     "prettier": "^3.1.0",
     "serverless": "^3.36.0",
     "serverless-offline": "^10.3.2",
