--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "iconv-lite": "^0.6.3",
-    "node-telegram-bot-api": "^0.64.0"
+    "telegraf": "^4.15.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.126",
-    "@types/node-telegram-bot-api": "^0.63.2",
+    "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.53.0",
