feat: npm 명령에 setWebHook 추가

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Telegram Bot",
   "scripts": {
-    "sls": "serverless"
+    "sls": "serverless",
+    "setWebHook": "ts-node setWebhook.ts"
   },
   "keywords": [],
   "author": "lodcoco@gmail.com",
