--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "iconv-lite": "^0.6.3",
+    "lodash": "^4.17.21",
+    "serverless-http": "^3.2.0",
     "telegraf": "^4.15.0"
   },
   "devDependencies": {
