--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "sls": "serverless",
     "setWebhook": "ts-node setWebhook.ts",
-    "offline-production": "sls offline --stage production"
+    "offline-production": "sls offline --stage production",
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "lodcoco@gmail.com",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.126",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
@@ -31,6 +33,7 @@
     "serverless": "^3.36.0",
     "serverless-offline": "^10.3.2",
     "serverless-plugin-typescript": "^2.1.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
