--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "author": "lodcoco@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.7.3",
-    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.7.6",
+    "cheerio": "^1.0.0",
     "lodash": "^4.17.21",
     "serverless-http": "^3.2.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.142",
+    "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.14",
+    "@types/node": "^20.16.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "axios-mock-adapter": "^1.22.0",
@@ -31,9 +31,9 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "serverless": "^3.39.0",
-    "serverless-offline": "^13.6.0",
+    "serverless-offline": "^13.8.0",
     "serverless-plugin-typescript": "^2.1.5",
-    "ts-jest": "^29.2.4",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   }
