--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.6",
-    "cheerio": "^1.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "lodash": "^4.17.21",
     "serverless-http": "^3.2.0",
     "telegraf": "^4.16.3"
