--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   "author": "lodcoco@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.7.6",
-    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "lodash": "^4.17.21",
     "serverless-http": "^3.2.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.16.2",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^20.16.10",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "axios-mock-adapter": "^1.22.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "serverless": "^3.39.0",
-    "serverless-offline": "^13.8.0",
+    "serverless-offline": "^13.8.1",
     "serverless-plugin-typescript": "^2.1.5",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
