--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "lodash": "^4.17.21",
+    "redis-om": "^0.4.6",
     "serverless-http": "^3.2.0",
     "telegraf": "^4.16.3"
   },
