--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "redis": "^4.7.0",
     "redis-om": "^0.4.6",
