--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "redis": "^4.7.0",
+    "redis-mock": "^0.56.3",
     "serverless-http": "^3.2.0",
     "telegraf": "^4.16.3"
   },
