--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "dayjs": "^1.11.13",
+    "ioredis": "^5.4.1",
+    "ioredis-mock": "^8.9.0",
     "lodash": "^4.17.21",
-    "redis": "^4.7.0",
-    "redis-mock": "^0.56.3",
     "serverless-http": "^3.2.0",
     "telegraf": "^4.16.3"
   },
