--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ioredis": "^5.6.0",
     "ioredis-mock": "^8.9.0",
     "lodash": "^4.17.21",
+    "openai": "^4.90.0",
     "serverless-http": "^3.2.0",
     "telegraf": "^4.16.3"
   },
