--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "sls": "serverless",
     "setWebhook": "ts-node setWebhook.ts",
     "offline-production": "sls offline --stage production",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc -p tsconfig.build.json"
   },
   "keywords": [],
   "author": "lodcoco@gmail.com",
@@ -16,7 +17,6 @@
     "cheerio": "^1.0.0",
     "dayjs": "^1.11.13",
     "ioredis": "^5.6.1",
-    "ioredis-mock": "^8.9.0",
     "lodash": "^4.17.21",
     "openai": "^4.104.0",
     "serverless-http": "^3.2.0",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.149",
+    "@types/ioredis-mock": "^8.2.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.29",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -32,6 +33,7 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "ioredis-mock": "^8.9.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "serverless": "^3.40.0",
@@ -39,6 +41,6 @@
     "serverless-plugin-typescript": "^2.1.5",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.8.3"
   }
 }
