--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,12 @@
     "target": "es2022",
     "module": "commonjs",
     "moduleResolution": "node",
-    "lib": [
-      "es2022"
-    ],
+    "lib": ["es2022"],
     "allowJs": true,
     "checkJs": true,
     "declaration": true,
     "rootDir": "./",
+    "outDir": "./dist",
     "removeComments": true,
     "strict": true,
     "noImplicitAny": true,
