--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.13",
     "ioredis": "^5.6.1",
     "lodash": "^4.17.21",
+    "mongoose": "^8.15.1",
     "openai": "^4.104.0",
     "serverless-http": "^3.2.0",
     "telegraf": "^4.16.3"
