--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
   "author": "lodcoco@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "cheerio": "^1.1.2",
-    "dayjs": "^1.11.13",
-    "ioredis": "^5.7.0",
+    "dayjs": "^1.11.18",
+    "glob": "^11.0.3",
+    "ioredis": "^5.8.1",
     "lodash": "^4.17.21",
-    "mongoose": "^8.18.0",
+    "mongoose": "^8.19.1",
     "openai": "^4.104.0",
     "serverless-http": "^3.2.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.152",
+    "@types/aws-lambda": "^8.10.156",
     "@types/ioredis-mock": "^8.2.6",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.17.2",
+    "@types/node": "^22.18.10",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "axios-mock-adapter": "^1.22.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.2",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
-    "ioredis-mock": "^8.9.0",
+    "ioredis-mock": "^8.13.0",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
-    "serverless": "^3.40.0",
-    "serverless-offline": "^13.9.0",
-    "serverless-plugin-typescript": "^2.1.5",
-    "ts-jest": "^29.4.1",
+    "serverless": "^4.21.1",
+    "serverless-offline": "^14.4.0",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   }
 }
