--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", ".build", "**/*spec.ts", "dist"]
+  "exclude": ["node_modules", "test", ".build", "**/*spec.ts", "dist"],
+  "compilerOptions": {
+    "skipLibCheck": true,
+    "types": ["node", "jest"]
+  }
 }
