--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Serverless Deploy
         uses: serverless/github-action@v3.2
         with:
-          args: -c "serverless plugin install --name serverless-plugin-typescript && serverless deploy -s production --verbose"
+          args: -c "serverless plugin install --name serverless deploy -s production --verbose"
           entrypoint: /bin/sh
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
