feat: 날씨 정보 메시지 발송 기능 1차

--- a/serverless.yml
+++ b/serverless.yml
@@ -29,6 +29,10 @@ provider:
     REDIS_SERVER_PASSWORD: ${self:custom.ENV.REDIS_SERVER_PASSWORD}
     OPENAI_API_KEY: ${self:custom.ENV.OPENAI_API_KEY}
     MONGO_URI: ${self:custom.ENV.MONGO_URI}
+    DATA_GO_API_KEY: ${self:custom.ENV.DATA_GO_API_KEY}
+    WEATHER_NX: ${self:custom.ENV.WEATHER_NX}
+    WEATHER_NY: ${self:custom.ENV.WEATHER_NY}
+    WEATHER_STATION: ${self:custom.ENV.WEATHER_STATION}
     LOCALE: 'ko-KR'
     TIMEZONE: 'Asia/Seoul'
     TZ: 'Asia/Seoul'
@@ -57,6 +61,15 @@ functions:
   dailyNews: # 매일 아침 뉴스
     handler: src/handlers/dailyNews.handler
     description: DailyNews Scheduler
+    events:
+      - schedule:
+          rate: cron(0 22 * * ? *)
+          enabled: true
+          description: '매일 오전 7시'
+
+  dailyWeather: # 매일 아침 날씨
+    handler: src/handlers/dailyWeather.handler
+    description: DailyWeather Scheduler
     events:
       - schedule:
           rate: cron(0 22 * * ? *)
