--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -33,8 +33,7 @@ jobs:
       - name: Serverless Deploy
         uses: serverless/github-action@v3.2
         with:
-          args: -c "serverless plugin install --name serverless deploy -s production --verbose"
-          entrypoint: /bin/sh
+          args: deploy -s production --verbose
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
