fix: Lambda 모듈 로드 오류 해결을 위한 빌드 설정 수정
- Serverless v4 내장 ESBuild 설정 추가
- GitHub Actions에서 로컬 serverless 사용하도록 변경

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,16 @@
 service: lassistant
 
+# 빌드 설정 (Serverless v4 내장 ESBuild)
+build:
+  esbuild:
+    bundle: true
+    minify: false
+    sourcemap: true
+    target: node22
+    platform: node
+    exclude:
+      - aws-sdk
+
 # 플러그인
 plugins:
   - serverless-offline
