--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -31,9 +31,7 @@ jobs:
         run: npm install -g yarn && yarn install
 
       - name: Serverless Deploy
-        uses: serverless/github-action@v3.2
-        with:
-          args: deploy -s production --verbose
+        run: yarn sls deploy --stage production --verbose
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
