fix: Serverless v3 및 serverless-plugin-typescript로 롤백
- serverless v4 → v3.40.0
- serverless-offline v14 → v13.9.0
- serverless-plugin-typescript 플러그인 추가
- GitHub Actions에서 serverless/github-action@v3.2 사용

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -31,7 +31,9 @@ jobs:
         run: npm install -g yarn && yarn install
 
       - name: Serverless Deploy
-        run: yarn sls deploy --stage production --verbose
+        uses: serverless/github-action@v3.2
+        with:
+          args: deploy -s production --verbose
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
