--- a/serverless.yml
+++ b/serverless.yml
@@ -1,19 +1,9 @@
 service: lassistant
 
-# 빌드 설정 (Serverless v4 내장 ESBuild)
-build:
-  esbuild:
-    bundle: true
-    minify: false
-    sourcemap: true
-    target: node22
-    platform: node
-    exclude:
-      - aws-sdk
-
 # 플러그인
 plugins:
   - serverless-offline
+  - serverless-plugin-typescript
 
 custom:
   ENV: ${file(./env/${self:provider.stage}.json)}
