--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "ioredis-mock": "^8.13.1",
     "jest": "^29.7.0",
     "prettier": "^3.7.4",
-    "serverless": "^4.29.0",
-    "serverless-offline": "^14.4.0",
+    "serverless": "^3.40.0",
+    "serverless-offline": "^13.9.0",
+    "serverless-plugin-typescript": "^2.1.5",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
