--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/aws-lambda": "^8.10.159",
     "@types/ioredis-mock": "^8.2.6",
     "@types/jest": "^29.5.14",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^22.19.3",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
