--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@types/aws-lambda": "^8.10.159",
     "@types/ioredis-mock": "^8.2.6",
     "@types/jest": "^29.5.14",
-    "@types/minimatch": "^6.0.0",
     "@types/node": "^22.19.3",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
     "axios-mock-adapter": "^1.22.0",
+    "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
@@ -38,8 +38,8 @@
     "jest": "^29.7.0",
     "prettier": "^3.7.4",
     "serverless": "^3.40.0",
+    "serverless-esbuild": "^1.57.0",
     "serverless-offline": "^13.9.0",
-    "serverless-plugin-typescript": "^2.1.5",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
