--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", ".build", "**/*spec.ts", "dist"],
+  "exclude": ["node_modules", "test", ".build", "**/*spec.ts", "dist", "debug"],
   "compilerOptions": {
     "skipLibCheck": true,
     "types": ["node", "jest"]
